# medical-tracker

./: .editorconfig  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CODEOWNERS  LICENSE  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/instructions/: markdown.instructions.md
backend/: PHASE2_COMPLETION_REPORT.md  README.md  alembic.ini  alembic_runner.py  generate_openapi.py  pyproject.toml  pytest.ini  run_pytest_uv.ps1  sitecustomize.py  temp_inc_test.py
backend/.brokenvenv/Scripts/: jsonpointer
backend/alembic/: env.py
backend/alembic/deprecated/: 20251029_000000_symptom_type_initial.py  20251030_120500_add_audit_entry_table.py  20251031_150000_drop_legacy_symptom_logs.py  6934fbabba4f_create_logs_tables.py  7b1c2d9f2e01_create_users_table.py  README.txt  a3c9824a5658_add_conditions_doctors_tables.py  add_auth_lockout_fields.py  add_sessions_table.py  af9d234e1b5c_add_medications_table.py  b4e7c1d9aa10_create_users_table.py  e3b9d8f4c2a1_add_missing_user_profile_fields.py
backend/alembic/versions/: 20251029_000000_symptom_type_initial.py  6934fbabba4f_create_logs_tables.py  7b1c2d9f2e01_create_users_table.py  a3c9824a5658_add_conditions_doctors_tables.py  add_auth_lockout_fields.py  add_sessions_table.py  af9d234e1b5c_add_medications_table.py  b4e7c1d9aa10_create_users_table.py  e3b9d8f4c2a1_add_missing_user_profile_fields.py
backend/alembic/versions_active/: 20251031_160000_initial_consolidated.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  auth_endpoints.py  auth_identity.py  auth_register.py  feel.py  logs.py  logs_minimal.py  medical_context.py  symptom_logs.py  symptom_types.py  telemetry.py
backend/app/api/auth/: __init__.py  demo.py  login.py  logout.py  register.py  routes.py  session.py
backend/app/api/v1/endpoints/: medications.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  dependencies.py  dependencies_auth.py  errors.py  http_client.py  logging.py  middleware.py  security.py  session_middleware.py  settings.py
backend/app/core/middleware/: __init__.py  session_middleware.py
backend/app/models/: __init__.py  audit_entry.py  base.py  logs.py  medical_context.py  medication.py  session.py  symptom_log.py  symptom_type.py  user.py
backend/app/schemas/: __init__.py  auth.py  logs.py  medical_context.py  medication.py
backend/app/services/: __init__.py  active_guard.py  auth_service.py  cache_placeholder.py  cookie_helper.py  duration_validator.py  email_normalization.py  feel_service.py  lockout.py  login_guard.py  masking.py  medical_context_service.py  medication.py  medication_log_service.py  rate_limit.py  session_cleanup.py  session_service.py  severity_mapping.py  symptom_log_service.py  symptom_type_service.py  user.py
backend/app/telemetry/: __init__.py  audit_events.py  audit_recorder.py  logging_auth.py  metrics.py  metrics_auth.py
backend/backend/: __init__.py
backend/backend/app/: __init__.py
backend/backend/app/core/: database.py
backend/backend/app/models/: __init__.py  logs.py
backend/scripts/: inspect_users_columns.py  list_tables.py  probe_importlib.py  probe_jose.py  seed_test_user.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_database.py  test_dependencies.py  test_errors.py  test_http_client.py  test_middleware.py  test_telemetry_metrics.py
backend/tests/contract/: __init__.py  test_auth_contract.py  test_feature004_openapi.py  test_login.py  test_logout.py  test_logs.py  test_medications.py  test_passport.py  test_register.py
backend/tests/http/: http_tests.http
backend/tests/integration/: README.md  test_access_guard.py  test_doctor_condition_link.py  test_feel_vs_yesterday.py  test_medication_deactivate.py  test_migration_constraints.py  test_migrations.py  test_symptom_log_flow.py  test_symptom_type_cookie_flow.py  test_symptom_type_crud.py  test_symptom_type_include_inactive.py
backend/tests/integration/auth/: __init__.py  test_audit_metrics.py  test_demo_session.py  test_login.py  test_login_integration.py  test_register.py  test_register_integration.py  test_session_timeout.py
backend/tests/unit/: test_active_guard.py  test_audit_diff_symptom_type.py  test_duration_validator.py  test_sanity.py  test_severity_mapping.py  test_tablename_convention.py
backend/tests/unit/auth/: test_password_and_lockout.py
contracts/: openapi.json  openapi.yaml  openapi_clean.yaml
frontend/: .env.example  .eslintrc.json  .prettierrc.json  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
reports/: quality-gate-summary.md
scripts/: generate-types.ps1  generate-types.sh  profile_backend.py  quickstart.ps1  quickstart.sh  run-dev.ps1  run-dev.sh
(+132 files in other folders)
